--- a/任务二/style.css
+++ b/任务二/style.css
@@ -1,10 +1,12 @@
 body
 {
-	margin: 0;
+	width: 100%;
+	margin: 0 auto;
+	text-align:center;
 }
 #World
 {
-	border:10px solid black;
+	border:5px solid black;
 	position: relative;
 	background: url(background.jpg);
 }
