--- a/任务三/myweb/public/stylesheets/style.css
+++ b/任务三/myweb/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  background-image: url(/images/background.jpg);
 }
 
 a {
   color: #00B7FF;
+}
+#signIn
+{
+	padding: 10px;
+	width: 200px;
+	height: 140px;
+	top: calc(50% - 81px);
+    left: calc(50% - 111px);
+	background-color: white;
+	border:1px solid;
+    border-radius:10px;
+	text-align: center;
+	position: absolute;
 }
