--- a/任务三/myweb/views/layout.jade
+++ b/任务三/myweb/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title= 登录
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
