--- a/任务三/myweb/views/layout.jade
+++ b/任务三/myweb/views/layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= 登录
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/jquery-3.2.1.min.js')
   body
     block content
