--- a/任务三/myweb/views/index.jade
+++ b/任务三/myweb/views/index.jade
@@ -1,14 +1,13 @@
 extends layout
 
 block content
-  #result
   #signIn
     #userName.message
       | 用户名:
-      input#name(type="text")
+      input#name.text(type="text")
     #passWord.message
       | 密  码:
-      input#psw(type="password")
+      input#psw.text(type="password")
     br
     #button
       button#signin.button(onclick='check()') 登录
