--- a/任务三/myweb/views/index.jade
+++ b/任务三/myweb/views/index.jade
@@ -10,6 +10,6 @@ block content
       input#psw.text(type="password")
     br
     #button
-      button#signin.button(onclick='check()') 登录
-      button#register.button 注册
+      button#signin.button(onclick='checkSend()') 登录
+      button#register.button(onclick='registerSend()') 注册
   script(src='/javascripts/checkuser.js')
