--- a/任务三/myweb/views/login.jade
+++ b/任务三/myweb/views/login.jade
@@ -1,1 +1,8 @@
 extends layout
+
+block content
+  form#uploadForm(method='POST', enctype='multipart/form-data', action='/file/uploadfile')
+    | 上传商品名称:
+    input(type='text',name='goodsName')
+    input(type='file',name='pics')
+    input(type='submit', value='提交')
