--- a/任务三/myweb/public/stylesheets/style.css
+++ b/任务三/myweb/public/stylesheets/style.css
@@ -3,9 +3,6 @@ body {
   background-image: url(/images/background.jpg);
 }
 
-a {
-  color: #00B7FF;
-}
 #signIn
 {
 	padding: 10px;
@@ -18,4 +15,18 @@ a {
     border-radius:10px;
 	text-align: center;
 	position: absolute;
+}
+#uploadForm
+{
+	padding: 10px;
+	width: 200px;
+	height: 140px;
+	top: calc(50% - 81px);
+    left: calc(50% - 111px);
+	background-color: white;
+	border:1px solid;
+    border-radius:10px;
+	text-align: center;
+	position: absolute;
+	line-height: 35px;
 }
