--- a/任务三/myweb/views/login.jade
+++ b/任务三/myweb/views/login.jade
@@ -1,8 +1,6 @@
 extends layout
 
 block content
-  form#uploadForm(method='POST', enctype='multipart/form-data', action='/file/uploadfile')
-    | 上传商品名称:
-    input#goodsName(type='text',name='goodsName')
-    input#pic(type='file',name='pics')
-    input#tosend(type='submit', value='提交')
+  ul
+    li Coffee
+    li Milk
