--- a/任务三/myweb/views/login.jade
+++ b/任务三/myweb/views/login.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   ul
-  script(src='/javascripts/toseeGoods.js')
+  - for(let i =0 ; i<goods.length ; i++){
+    li #{goods[i].goodsName}
+  - }
