--- a/任务三/myweb/public/stylesheets/style.css
+++ b/任务三/myweb/public/stylesheets/style.css
@@ -1,8 +1,8 @@
-body {
+body
+{
   margin: 0;
   background-image: url(/images/background.jpg);
 }
-
 #signIn
 {
 	padding: 10px;
@@ -29,4 +29,9 @@ body {
 	text-align: center;
 	position: absolute;
 	line-height: 35px;
+}
+#goods
+{
+	margin: 20px;
+	padding: 20px;
 }
