点击商品进入详情

--- a/任务三/myweb/views/login.jade
+++ b/任务三/myweb/views/login.jade
@@ -3,5 +3,6 @@ extends layout
 block content
   #goods
     - for(let i =0 ; i<goods.length ; i++){ 
-    img(src="/images/goods/"+goods[i].goodsName+".jpg")
+    img(src="/images/goods/"+goods[i].goodsName+".jpg" id=goods[i].goodsName , onclick='toDetails(this)')
     - }
+  script(src='/javascripts/goods.js')
