--- a/任务三/myweb/public/stylesheets/style.css
+++ b/任务三/myweb/public/stylesheets/style.css
@@ -28,10 +28,15 @@ body
     border-radius:10px;
 	text-align: center;
 	position: absolute;
-	line-height: 35px;
+	line-height: 28px;
 }
 #goods
 {
 	margin: 20px;
 	padding: 20px;
+}
+#detail
+{
+    left: calc(50% - 128px);
+    position: absolute;
 }
