--- a/任务三/myweb/views/details.jade
+++ b/任务三/myweb/views/details.jade
@@ -3,3 +3,4 @@ extends layout
 block content
   - let detailPath="/images/goods/"+goodsname+"_detail.jpg";
   img#detail(src=detailPath)
+  button(onclick='location="/login"') 返回
