--- a/q3/myweb/views/login.jade
+++ b/q3/myweb/views/login.jade
@@ -4,7 +4,7 @@ block content
   #goods
     - for(let i =0 ; i<goods.length ; i++){
     div.goods
-      img(src="/images/goods/"+goods[i].goodsName+".jpg" id=goods[i].goodsName , onclick='toDetails(this)')
+      img(src=goods[i].goodsPic , id=goods[i].goodsName , onclick='toDetails(this)')
     - }
   button#addfile(onclick='location="/file/upload"') 添加商品
   script(src='/javascripts/goods.js')
