封装上传图片函数

--- a/q3/myweb/views/detail.jade
+++ b/q3/myweb/views/detail.jade
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-  - let detailPath=goodDetail;
-  img#detail(src=detailPath)
+  img#detail(src=goodDetail)
   button(onclick='location="/login"') 返回
