--- a/q3/myweb/views/index.jade
+++ b/q3/myweb/views/index.jade
@@ -12,4 +12,5 @@ block content
     #button
       button#signin.button(onclick='checkSend()') 登录
       button#register.button(onclick='registerSend()') 注册
+      button(onclick='toSeeCookie()') cookie
   script(src='/javascripts/checkuser.js')
