修复了一个bug

--- a/q3/myweb/views/layout.jade
+++ b/q3/myweb/views/layout.jade
@@ -7,8 +7,8 @@ html
   body
     #topHeader
       #topLabel
-      #the_message.message
-        #the_userName.topText 未登录
-        #toExit.topText(onclick='delAllCookie()') 退出
+      #the_message
+        #the_userName.topText
+        #toExit.topText(onclick='delAllCookie()')
         script(src='/javascripts/alreadyLoad.js')
     block content
