--- a/q3/myweb/views/layout.jade
+++ b/q3/myweb/views/layout.jade
@@ -9,6 +9,6 @@ html
       #topLabel
       #the_message
         #the_userName.topText
-        #toExit.topText(onclick='delAllCookie()')
+        #toExit.topText(onclick='deleteCookie()')
         script(src='/javascripts/alreadyLoad.js')
     block content
