--- a/q3/myweb/views/register.jade
+++ b/q3/myweb/views/register.jade
@@ -10,6 +10,6 @@ block content
       input#psw.text(type="password")
     br
     #button
-      #signin.loginText(onclick='checkSend()') 登录
-      #register.loginText(onclick='toRegister()') 注册
+      #back_login.loginText(onclick='backLogin()') 返回
+      #register.loginText(onclick='registerSend()') 去注册
   script(src='/javascripts/checkuser.js')
