--- a/q3/myweb/views/uploadfile.jade
+++ b/q3/myweb/views/uploadfile.jade
@@ -7,5 +7,5 @@ block content
     input#pic(type='file',name='pics')
     input#det(type='file',name='detail')
     input#tosend(type='submit', value='提交')
-  button#backlogin(onclick='location="/login"') 返回
+  #backlogin.topText(onclick='location="/login"') 返回
   script(src='/javascripts/checkfile.js')
