--- a/q3/myweb/views/detail.jade
+++ b/q3/myweb/views/detail.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   img#detail(src=goodDetail)
-  button(onclick='location="/login"') 返回
+  #backlogin.topText(onclick='location="/login"') 返回
+  #back_top(onclick='backTop()')
+  script(src='/javascripts/detail.js')
