--- a/q3/myweb/views/index.jade
+++ b/q3/myweb/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  #signIn(onkeypress="if (event.keyCode == 13) {checkSend();}")
+  #signIn(onkeypress="if (event.key == 'Enter') {checkSend();}")
     #userName.message
       | 用户名:
       input#name.text(type="text")
-     #passWord.message
+    #passWord.message
       | 密  码:
       input#psw.text(type="password")
     br
