--- a/q3/myweb/views/login.jade
+++ b/q3/myweb/views/login.jade
@@ -7,4 +7,5 @@ block content
       img(src=goods[i].goodsPic , id=goods[i].goodsName , onclick='toDetails(this)')
     - }
   #addfile.topText(onclick='location="/file/upload"') 添加商品
+  #to_deletegoods.topText(onclick='location="/deletegoods"') 删除商品
   script(src='/javascripts/goods.js')
