上传网站图标文件

--- a/q3/myweb/views/layout.jade
+++ b/q3/myweb/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= 登录
+    title 阿伦丶first_web
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery-3.2.1.min.js')
   body
