--- a/q3/myweb/views/uploadfile.jade
+++ b/q3/myweb/views/uploadfile.jade
@@ -2,10 +2,14 @@ extends layout
 
 block content
   form#uploadForm(method='POST', enctype='multipart/form-data', action='/file/uploadfile' , onsubmit="return checkUpFile(this)")
-    | 上传商品名称:
+    | 商品名称:
     input#goodsName(type='text',name='goodsName')
-    input#pic(type='file',name='pics')
-    input#det(type='file',name='detail')
+    .uploadfile_button
+      div 上传图片
+      input#pic(type='file',name='pics')
+    .uploadfile_button
+      div 上传详情
+      input#det(type='file',name='detail')
     input#tosend(type='submit', value='提交')
   #backlogin.topText(onclick='location="/login"') 返回
   script(src='/javascripts/checkfile.js')
