修改了下路由器的逻辑

--- a/q3/myweb/views/deletegoods.jade
+++ b/q3/myweb/views/deletegoods.jade
@@ -8,5 +8,5 @@ block content
     br
     #button
       #deletegoods.loginText(onclick='checkgood()') 确认删除
-  #backlogin.topText(onclick='location="/login"') 返回
-  script(src='/javascripts/checkgoods.js')
+  #backlogin.topText(onclick='location="/users/login"') 返回
+  script(src='/javascripts/goods.js')
