--- a/q3/myweb/views/register.jade
+++ b/q3/myweb/views/register.jade
@@ -10,6 +10,6 @@ block content
       input#psw.text(type="password")
     br
     #button
-      #back_login.loginText(onclick='backLogin()') 返回
+      #back_login.loginText(onclick='backIndex()') 返回
       #register.loginText(onclick='registerSend()') 去注册
   script(src='/javascripts/checkuser.js')
