--- a/q3/myweb/views/layout.jade
+++ b/q3/myweb/views/layout.jade
@@ -4,6 +4,7 @@ html
     title 阿伦丶first_web
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery-3.2.1.min.js')
+    script(src="/javascripts/md5.js", type="text/javascript")
   body
     #topHeader
       #topLabel
