--- a/q6(vue-webpack)/src/assets/styles/base.css
+++ b/q6(vue-webpack)/src/assets/styles/base.css
@@ -1,3 +1,22 @@
-h1{
-    color: #999;
+body {
+     margin: 0; 
+}
+
+.header {
+    width: 100%;
+    height: 170px;
+    background: transparent url(../imgs/header/header.png) no-repeat center;
+}
+.header_line {
+    height: 42px;
+    background-color: rgba(255, 255, 255, 0.4);
+}
+#logo {
+    background: url(../imgs/header/logo.png);
+    position: absolute;
+    cursor: pointer;
+    width: 220px;
+    height: 105px;
+    left: 24px;
+    top: 55px;
 }
