--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -1,6 +1,3 @@
-@header_image_path: url(../imgs/header/header.png);
-@icons_image_path: url(../imgs/icon/icons.png);
-@logo_image_path: url(../imgs/header/logo.png);
 .header {
     position: relative;
     width: 100%;
@@ -89,11 +86,11 @@
     transition: height 0.5s;
 }
 .game:hover .child_menu {
-    height: 150px;
+    height: @child_menu_height;
 }
 .live:hover .child_menu {
-    height: 150px;
+    height: @child_menu_height;
 }
 .mobile:hover .child_menu {
-    height: 150px;
+    height: @child_menu_height;
 }
