--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -2,3 +2,4 @@
 @icons_image_path: url(../imgs/icon/icons.png);
 @logo_image_path: url(../imgs/header/logo.png);
 @child_menu_height: 150px;
+@child_menu_width: 200px;
