--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -34,9 +34,18 @@
 }
 .header_line_menu {
     position: relative;
+    height: 100%;
     z-index: 20;
     width: 980px;
     margin: auto;
+}
+.header_line_menu_left {
+    width: 394px;
+    float: left;;
+}
+.header_line_menu_right {
+    width: 339px;
+    float: right;
 }
 #logo {
     background: @logo_image_path;
@@ -52,7 +61,7 @@
 .home .i-link {
     padding-left: 20px;
 }
-.menu {
+.menu_left, .menu_right {
     position: relative;
     display: inline-block;
     line-height: 42px;
@@ -60,13 +69,16 @@
     color: black;
     height: 42px;
 }
-.home, .game {
+.menu_right {
+    float: right;
+}
+.home, .game, .later {
     width: 70px;
 }
-.pay, .mobile {
+.pay, .mobile, .favorite, .submission {
     width: 58px;
 }
-.friend, .live, .real-things {
+.friend, .live, .real-things, .message, .dynamic, .history {
     width: 46px;
 }
 .i-link {
@@ -93,4 +105,22 @@
 }
 .mobile:hover .curtain {
     height: @child_menu_height;
+}
+.userPortrait {
+    float: right;
+}
+.userPortrait_image {
+    border-radius:18px;
+    margin-top: 3px;
+    background: @userPortrait_image_path;
+    width: @userPortrait_size_begin;
+    height: @userPortrait_size_begin;
+    background-size: 100% 100%;
+    transition-timing-function: linear;
+    transition: all 0.3s;
+}
+.userPortrait_image:hover {
+    cursor: pointer;
+    transform-origin: 21px 0;
+    transform: scale(2) translateY(10px);
 }
