--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -1,5 +1,8 @@
 @header_image_path: url(../imgs/header/header.png);
 @icons_image_path: url(../imgs/icon/icons.png);
 @logo_image_path: url(../imgs/header/logo.png);
+@userPortrait_image_path: url(../imgs/header/alun.png);
 @child_menu_height: 150px;
 @child_menu_width: 200px;
+@userPortrait_size_begin: 36px;
+@userPortrait_size_after: 60px;
