--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -96,6 +96,7 @@
     overflow: hidden;
     background: rgba(0, 0, 0, 0.2);
     transition: height 0.5s;
+    transition-delay: 0.2s;
 }
 .game:hover .curtain {
     height: @child_menu_height;
@@ -116,8 +117,8 @@
     width: @userPortrait_size_begin;
     height: @userPortrait_size_begin;
     background-size: 100% 100%;
-    transition-timing-function: linear;
     transition: all 0.3s;
+    transition-delay: 0.3s;
 }
 .userPortrait_image:hover {
     cursor: pointer;
