给头像加了个影子

--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -124,4 +124,5 @@
     cursor: pointer;
     transform-origin: 21px 0;
     transform: scale(2) translateY(10px);
+    box-shadow: 0 0 3px 1px lightskyblue;
 }
