--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -2,7 +2,13 @@
 @icons_image_path: url(../imgs/icon/icons.png);
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
+//单个菜单栏宽度
+@menu_width_first: 70px;
+@menu_width_second: 58px;
+@menu_width_third: 46px;
+//子菜单大小
 @child_menu_height: 150px;
 @child_menu_width: 200px;
+//头像大小
 @userPortrait_size_begin: 36px;
 @userPortrait_size_after: 60px;
