--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -1,5 +1,4 @@
 .header {
-    position: relative;
     width: 100%;
     height: 170px;
     background: transparent @header_image_path no-repeat center;
@@ -7,11 +6,12 @@
 
 .header_line {
     position: relative;
+    width: 100%;
     height: 42px;
 }
 
 .header_line_under {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -20,9 +20,9 @@
 .header_line_under_filter {
     height: 62px;
     width: 100%;
-    position: absolute;
+    position: relative;
     top: -4px;
-    background: transparent @header_image_path no-repeat;
+    background: transparent @header_image_path no-repeat center;
     background-position: center 0px!important;
     filter: blur(5px);
 }
@@ -30,27 +30,31 @@
 .header_line_under_color {
     position: absolute;
     top: 0;
-    left: 0;
     height: 100%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.4);
-    z-index: 10;
 }
 
-.header_line_menu {
+.header_back {
     position: relative;
-    height: 100%;
-    z-index: 20;
+    top: -42px;
     width: 980px;
+    height: 100%;
     margin: auto;
 }
 
-.header_line_menu_left {
+.header_menu {
+    position: relative;
+    height: 42px;
+    width: 100%;
+}
+
+.header_menu_left {
     width: 394px;
     float: left;
 }
 
-.header_line_menu_right {
+.header_menu_right {
     width: 339px;
     float: right;
     .first .curtain {
@@ -67,7 +71,6 @@
 #logo {
     background: @logo_image_path;
     position: absolute;
-    z-index: -1;
     width: 220px;
     height: 105px;
     left: 24px;
