--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -148,3 +148,14 @@
         box-shadow: 0 0 3px 1px lightskyblue;
     }
 }
+
+.animation {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 80px;
+    left: 50px;
+    cursor: pointer;
+    background: url(../imgs/header/animation.png);
+}
+
