--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -1,5 +1,6 @@
 @header_image_path: url(../imgs/header/header.png);
 @icons_image_path: url(../imgs/icon/icons.png);
+@icon2_image_path: url(../imgs/icon/up-new-iocn.png);
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
 //单个菜单栏宽度
