--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -176,8 +176,8 @@
     z-index: 10;
     top: 4px;
     width: 55px;
-    height: 42px;
-    background: @icon2_image_path no-repeat;
+    height: 38px;
+    background: @icon2_image_path;
 }
 
 .mobilePhone {
