--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -38,7 +38,7 @@
 .header_back {
     position: relative;
     top: -42px;
-    width: 1028px;
+    width: 1160px;
     height: 100%;
     margin: auto;
 }
@@ -56,7 +56,6 @@
 
 .header_menu_right {
     float: right;
-    margin-right: 53px;
     .first .curtain {
         left: @menu_width_first / 2 - @child_menu_width / 2;
     }
@@ -172,7 +171,7 @@
 
 .submission_icon {
     position: absolute;
-    right: 0;
+    right: -53px;
     z-index: 10;
     top: 4px;
     width: 55px;
