添加了一个子任务栏

--- a/q6(vue-webpack)/src/assets/less/header.less
+++ b/q6(vue-webpack)/src/assets/less/header.less
@@ -38,7 +38,7 @@
 .header_back {
     position: relative;
     top: -42px;
-    width: 1160px;
+    width: @back_width;
     height: 100%;
     margin: auto;
 }
@@ -180,7 +180,7 @@
 }
 
 .mobilePhone {
-    position: absolute;
+    position: fixed;
     width: 80px;
     height: 80px;
     top: 300px;
