--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -4,6 +4,7 @@
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
 //单个菜单栏宽度
+@back_width: 1160px;
 @menu_width_first: 70px;
 @menu_width_second: 58px;
 @menu_width_third: 46px;
