子任务栏完成（菜单未做）

--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -3,8 +3,9 @@
 @icon2_image_path: url(../imgs/icon/up-new-iocn.png);
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
+@specialGif_image_path: url(../imgs/icon/special.gif);
 //单个菜单栏宽度
-@back_width: 1160px;
+@back_width: 980px;
 @menu_width_first: 70px;
 @menu_width_second: 58px;
 @menu_width_third: 46px;
