--- a/q6(vue-webpack)/src/assets/less/header_add.less
+++ b/q6(vue-webpack)/src/assets/less/header_add.less
@@ -6,6 +6,7 @@
 }
 
 .headerAdd_menu {
+    float: left;
     height: 100%;
 }
 
@@ -15,6 +16,10 @@
     width: 48px;
     text-align: center;
     cursor: pointer;
+}
+
+.index {
+    width: 38px;
 }
 
 .headerAdd_menu_item_topImage {
@@ -61,4 +66,12 @@
 
 .blackHouse .headerAdd_menu_item_topImage {
     background-position: -87px -1943px;
+}
+
+.special_gif {
+    float: right;
+    width: 74px;
+    height: 42px;
+    cursor: pointer;
+    background: @specialGif_image_path;
 }
