--- a/q6(vue-webpack)/src/assets/less/header_add.less
+++ b/q6(vue-webpack)/src/assets/less/header_add.less
@@ -3,6 +3,7 @@
     margin-top: 10px;
     width: @back_width;
     height: 48px;
+    background-color: white;
 }
 
 .headerAdd_menu {
@@ -11,11 +12,74 @@
 }
 
 .headerAdd_menu_item {
+    position: relative;
     display: inline-block;
     height: 100%;
     width: 48px;
+    color: black;
+    text-decoration: none;
     text-align: center;
     cursor: pointer;
+    &:hover .left_item_child {
+        display: inline-block;
+    }
+}
+
+.left_item_child {
+    display: none;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 48px;
+    width: 130px;
+    text-align: left;
+    background-color: white;
+    border-radius: 0 0 3px 3px;
+    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.left_item_child_menu {
+    display: flex;
+    transition: all 0.2s;
+    &:hover {
+        background-color: #E5E9EF;
+        .arrow {
+            padding-left: 29px;
+            background-position-x: 17px;
+        }
+        .arrow_back {
+            right: 100%;
+            opacity: 1;
+        }
+    }
+}
+
+.arrow {
+    padding-left: 24px;
+    line-height: 30px;
+    background: @icons2_image_path 12px -1613px no-repeat;
+    transition-timing-function: linear;
+    transition: all 0.2s;
+}
+
+.arrow_back_frame {
+    position: relative;
+    flex: 1;
+    margin-left: 16px;
+    width: 100%;
+    height: 30px;
+}
+
+.arrow_back {
+    position: absolute;
+    right: 0;
+    width: 10px;
+    height: 30px;
+    background: @icons2_image_path 0 -1576px no-repeat;
+    opacity: 0;
+    transition-timing-function: linear;
+    transition: all 0.2s;
 }
 
 .index {
@@ -44,7 +108,7 @@
     transform: scale(0.9)
 }
 
-.right_item:hover div{
+.right_item:hover div {
     color: #00A1D6;
 }
 
