--- a/q6(vue-webpack)/src/assets/less/body.less
+++ b/q6(vue-webpack)/src/assets/less/body.less
@@ -1,8 +1,9 @@
 .body_index, .body_about {
     position: absolute;
-    width:  @back_width;
+    top: 48px;
+    margin-top: 10px;
+    width: 100%;
     z-index: -2;
-    top: 250px;
 }
 
 .mobilePhone {
@@ -10,7 +11,7 @@
     width: 80px;
     height: 80px;
     top: 300px;
-    right: 400px;
+    right: -80px;
     cursor: pointer;
     background: url(../imgs/header/animation.png);
 }
