--- a/q6(vue-webpack)/src/assets/less/header_add.less
+++ b/q6(vue-webpack)/src/assets/less/header_add.less
@@ -1,4 +1,5 @@
 .headerAdd {
+    position: relative;
     margin: auto;
     margin-top: 10px;
     width: @back_width;
@@ -20,26 +21,40 @@
     text-decoration: none;
     text-align: center;
     cursor: pointer;
-    &:hover .left_item_child {
-        display: inline-block;
+    &:hover {
+        .left_item_child {
+            display: inline-block;
+        }
+        .right_item_child {
+            display: inline-block;
+        }
     }
 }
 
-.left_item_child {
+.left_item_child, .right_item_child {
     display: none;
     position: absolute;
     z-index: -1;
     left: 0;
     top: 48px;
-    width: 130px;
     text-align: left;
     background-color: white;
     border-radius: 0 0 3px 3px;
-    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.05);
     overflow: hidden;
+    ul {
+        width: 130px;
+    }
 }
 
-.left_item_child_menu {
+.right_item_child {
+    z-index: 0;
+    ul {
+        width: 100px;
+    }   
+}
+
+.left_item_child_menu, .right_item_child_menu {
     display: flex;
     transition: all 0.2s;
     &:hover {
@@ -108,8 +123,16 @@
     transform: scale(0.9)
 }
 
-.right_item:hover div {
+.right_item:hover div:nth-child(2) {
     color: #00A1D6;
+}
+
+.square .right_item_child {
+    width: 387px;
+}
+
+.liveBroadcast .right_item_child {
+    width: 350px;
 }
 
 .index .headerAdd_menu_item_topImage {
@@ -135,7 +158,7 @@
 .special_gif {
     float: right;
     width: 74px;
-    height: 42px;
+    height: 48px;
     cursor: pointer;
-    background: @specialGif_image_path;
+    background: @specialGif_image_path no-repeat;
 }
